--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   },
   "require": {
     "php": ">=8.0",
+    "ext-ftp" : "*"
     "nicolab/php-ftp-client": "^2.0",
     "phpseclib/phpseclib": "^2.0"
   }
